# bof2d

./: CMakeLists.txt  Dependencies.cmake  Dependencies.cmake.in  Dependencies.private.cmake  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
help/: bof2d.Doxyfile  bof2d.Doxyfile.in
lib/: CMakeLists.txt
lib/include/bof2d/: bof2d.h  bof2d_audio_decoder.h  bof2d_audio_encoder.h  bof2d_av_codec.h  bof2d_ball_obj.h  bof2d_codec.h  bof2d_convert.h  bof2d_export.h  bof2d_fileio.h  bof2d_game_engine.h  bof2d_game_obj.h  bof2d_mediadetector.h  bof2d_particle_gen.h  bof2d_res_mgr.h  bof2d_sprite_renderer.h  bof2d_text_renderer.h  bof2d_texture.h  bof2d_version_info.h.in  bof2d_video_decoder.h  bof2d_video_encoder.h
lib/include/bof2d/engine/: bof2d_ball_obj.h  bof2d_game_engine.h  bof2d_game_obj.h  bof2d_particle_gen.h  bof2d_res_mgr.h  bof2d_shader.h  bof2d_sprite_renderer.h  bof2d_text_renderer.h  bof2d_texture.h
lib/src/: bof2d.cpp  bof2d_audio_decoder.cpp  bof2d_audio_encoder.cpp  bof2d_av_codec.cpp  bof2d_codec.cpp  bof2d_convert.cpp  bof2d_fileio.cpp  bof2d_game_engine.cpp  bof2d_game_obj.cpp  bof2d_mediadetector.cpp  bof2d_opengl.cpp  bof2d_particle_gen.cpp  bof2d_res_mgr.cpp  bof2d_shader.cpp  bof2d_sprite_renderer.cpp  bof2d_text_renderer.cpp  bof2d_texture.cpp  bof2d_video_decoder.cpp  bof2d_video_encoder.cpp
lib/src/engine/: bof2d_ball_obj.cpp  bof2d_game_engine.cpp  bof2d_game_obj.cpp  bof2d_opengl.cpp  bof2d_particle_gen.cpp  bof2d_res_mgr.cpp  bof2d_shader.cpp  bof2d_sprite_renderer.cpp  bof2d_text_renderer.cpp  bof2d_texture.cpp
tests/: CMakeLists.txt
tests/data/: jsonparser.json
tests/include/: gtestrunner.h
tests/res/: l.txt
tests/res/shader/: particle.vs  sprite.fs  text_2d.vs
tests/src/: main.cpp  ut_2d.cpp  ut_convert.cpp  ut_ffmpeg.cpp  ut_fileio.cpp  ut_gameengine.cpp  ut_gameengine2d.cpp  ut_mediadetector.cpp
